@@ -19,6 +19,11 @@ namespace MUSIC_INFO
 		virtual ~CMusicInfoTagLoaderWMA();
 
 		virtual bool Load(const CStdString& strFileName, CMusicInfoTag& tag);
+
 	protected:
+						void SetTagValueString(const CStdString& strFrameName, const CStdString& strValue, CMusicInfoTag& tag);
+						void SetTagValueDWORD(const CStdString& strFrameName, DWORD dwValue, CMusicInfoTag& tag);
+						void SetTagValueBinary(const CStdString& strFrameName, const LPBYTE pValue, CMusicInfoTag& tag);
+						void SetTagValueBool(const CStdString& strFrameName, BOOL bValue, CMusicInfoTag& tag);
 	};
 };
